improve compared image attachment in Allure